# polyforge

./: LAUNCH_show_hn.md  LICENSE  PUBLISHING.md  README.md  VALIDATION.md  pyproject.toml
examples/: demo.py  gateway_demo.py  mcp_demo.py  mcp_servers.yaml  mcp_servers_gather.yaml  messy_input.py  polyforge.yaml
polyforge/: cli.py
polyforge/adapters/: base.py  concrete.py
polyforge/blocks/: analyzer.py
polyforge/contracts/: contract.py
polyforge/gateway/: config.py  deprecation.py  gateway.py
polyforge/mcp/: auditor.py  github_gather.py  manifest.py  scorer.py
polyforge/orchestration/: orchestrator.py
tests/: test_cli_mcp_gather.py  test_github_gather.py  test_manifest.py
